--- a/e-commerce-app/src/index.html
+++ b/e-commerce-app/src/index.html
@@ -10,6 +10,9 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">-->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.js"></script>-->
+
 </head>
 <body>
   <app-root></app-root>
